infra/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-conversation-web-app-service
  # labels:
    # app.kubernetes.io/name: live-conversation-web-app-service
spec:
  selector:
    app: live-conversation-web-app
  ports:
  - name: live-conversation-web-app-service 
    # port: 8000
    port: 80
    targetPort: 80
    protocol: TCP
