infra/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-conversation-web-app-ingress
  # labels:
  #   app.kubernetes.io/name: live-conversation-web-app-ingress
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    # kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: live.labmojodoo.com
    http:
      paths:
        - path: "/(.*)"
          pathType: Prefix
          backend:
            service:
              name: live-conversation-web-app-service
              port: 
                number: 8000
